Add jdk download to launch_lightbeat.sh Add basic windows .bat script too Improve .zip structure